--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ header {
   background-color: #ddd;
 }
 
+.logo {
+  max-width: 200px;
+}
+
 .playgrounds {
   background-color: #efefef;
 }
@@ -16,4 +20,15 @@ header {
 
 .box {
   background-color: #fff;
+}
+
+table {
+  min-width: 50em;
+}
+@media only screen and (min-width: 60em) {
+
+  .table-wrapper {
+    overflow: visible;
+  }
+
 }
