--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,11 @@ header {
 table {
   min-width: 50em;
 }
+
+th,
+td {
+  border-bottom: 1px solid #333;
+}
 @media only screen and (min-width: 60em) {
 
   .table-wrapper {
