--- a/css/main.css
+++ b/css/main.css
@@ -45,10 +45,41 @@ td {
   padding-left: 40px;
 }
 
+@media only screen and (min-width: 38em) {
+
+  .play {
+    padding-right: 1em;
+  }
+
+   .list-group {
+     padding-top: 1em;
+     padding-left: 1em;
+   }
+
+   .search {
+     padding-top: 1.5em;
+   }
+
+   #input-container {
+     position: relative;
+   }
+
+   #input-container > img {
+     position: absolute;
+     top: 30px;
+     left: 6px;
+   }
+
+   #input-container > input {
+     padding-left: 40px;
+   }
+
+}
+
 @media only screen and (min-width: 60em) {
 
   .table-wrapper {
-    overflow: visible;
+    overflow: hidden;
   }
 
 }
