--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,14 @@ td {
     padding-left: 40px;
   }
 
+  .img-flex {
+    width: 90%;
+  }
+
+  .margin {
+    margin: 0;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
