--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,14 @@ td {
   padding-left: 40px;
 }
 
+@media only screen and (min-width: 20em) {
+
+  .margins {
+    padding-top: .05em;
+  }
+
+}
+
 @media only screen and (min-width: 25em) {
 
   .img-flex {
@@ -57,6 +65,10 @@ td {
 
   caption {
     margin-top: .35em;
+  }
+
+  .margins {
+    padding-top: .15em;
   }
 
 }
